--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VITE_BE_API="https://solidpayout.alwaysdata.net/"
+VITE_BE_API="https://solidpayout.alwaysdata.net"
 VITE_BASE_URL="https://www.solidpayouts.com"
