--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 4000",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "awesome-notifications": "^3.1.3",
     "axios": "^1.3.5",
     "currency.js": "^2.0.4",
     "filestack-js": "^3.26.0",
